news der letzten woche

--- a/index.html
+++ b/index.html
@@ -133,10 +133,11 @@
                 </div>
                 <div class="large-3 columns">
                     <select id="date-select">
+                        <option value="last-week">letzte Woche</option>
                         <option value="entire-time">gesamter Zeitraum</option>
                         <option value="today">Heute</option>
                         <option value="yesterday">Gestern</option>
-                        <option value="last-week">letzte Woche</option>
+
                         <option value="last-four-weeks">letzten vier Wochen</option>
                     </select>
                 </div>
@@ -290,6 +291,7 @@
 <script type="text/javascript" src="src/index/DrawMap.js"></script>
 <script type="text/javascript" src="src/index/DataObjectFactory.js"></script>
 
+<script src="libs/jquery.dotdotdot.min.js"></script>
 
 <script>
     $(document).foundation();
