--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </div>
 <script>
     $(document).ready(function () {
-        $("#menu-left").dotdotdot({
+        $(".entry-summary").dotdotdot({
             //	configuration goes here
         });
     });
