--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <script src="js/vendor/modernizr.js"></script>
     <script src="js/leaflet.js"></script>
     <script src="js/vendor/jquery.js"></script>
+    <script src="js/foundation/foundation.js"></script>
+    <script src="js/foundation/foundation.accordion.js"></script>
     <script src="leaflet_markercluster_07/dist/leaflet.markercluster.js"></script>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css"/>
 
@@ -258,7 +260,16 @@
 
 </div>
 
+<article id="menu-rechts">
+    <ul class="accordion" id="accordUl" data-accordion>
+
+    </ul>
+</article>
+
 <article id="menu-left">
+
+
+
     <div id="close-preview"><i class="fi-x"></i></div>
     <img src="https://dhregensburg.files.wordpress.com/2012/11/img_1044-e1406648774335.jpg" width="485" height="209"
          alt="">
