chornologische ansicht Button zum Anzeigen / Schließen

--- a/index.html
+++ b/index.html
@@ -119,10 +119,11 @@
             <ul id="menu-list">
                 <li data-show="search"><i class="fi-magnifying-glass"></i></li>
                 <li data-show="location"><i class="fi-marker"></i></li>
+                <li data-show="chrono"><i class="fi-list-thumbnails"></i></li>
                 <!--<li data-show="video"><i class="fi-video"></i></li>
                 <li data-show="text"><i class="fi-clipboard-notes"></i></li>
                 <li data-show="image"><i class="fi-puzzle"></i></li>
-                <li data-show="share" id="share-button"><i class="fi-share"></i></li>-->
+                -->
             </ul>
         </div>
         <div class="large-9 columns">
@@ -267,9 +268,14 @@
 </div>
 
 <article id="menu-rechts">
-    <ul class="accordion" id="accordUl" data-accordion>
+    <ul class="accordion menu-item" id="chrono-wrapper" data-accordion>
 
     </ul>
+    <!--
+     <ul class="accordion" id="accordUl" data-accordion>
+        "menu-item" id="location-wrapper"
+    </ul>
+    -->
 </article>
 
 <article id="menu-left">
