--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="css/foundation-icons/foundation-icons.css"/>
     <link rel="stylesheet" type="text/css" href="leaflet_markercluster_07/dist/markercluster.css"/>
     <link rel="stylesheet" type="text/css" href="leaflet_markercluster_07/dist/markercluster_default.css"/>
+    <link rel="stylesheet" href="css/leaflet.css"/>
 
     <script src="js/vendor/modernizr.js"></script>
     <script src="js/leaflet.js"></script>
@@ -25,7 +26,7 @@
     <script src="js/foundation/foundation.reveal.js"></script>
     <script src="leaflet_markercluster_07/dist/leaflet.markercluster.js"></script>
     <script src="libs/jquery.dotdotdot.min.js"></script>
-    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css"/>
+    <!--<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css"/>-->
 
 </head>
 <body>
@@ -35,7 +36,7 @@
 
 <div id="myModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
 
-    <h2 id="modalTitle">Teilen sie einen Artikel</h2>
+    <h2 id="modalTitle">Teilen sie diesen Artikel</h2>
     <br/><br/>
 
     <div class="row">
@@ -141,6 +142,8 @@
 </script>
 <ul id="autocomplete">
 </ul>
+
+
 <div id="header">
 
 
@@ -149,7 +152,7 @@
             <ul id="menu-list">
                 <li data-show="search"><i class="fi-magnifying-glass"></i></li>
                 <li data-show="location"><i class="fi-marker"></i></li>
-                <li data-show="chrono"><i class="fi-list-thumbnails"></i></li>
+                <li data-show="chrono" id="right-menu-button"><i class="fi-list-thumbnails"></i></li>
                 <!--<li data-show="video"><i class="fi-video"></i></li>
                 <li data-show="text"><i class="fi-clipboard-notes"></i></li>
                 <li data-show="image"><i class="fi-puzzle"></i></li>
