--- a/index.html
+++ b/index.html
@@ -47,13 +47,14 @@
             <br/>
         </div>
         <div class="large-4 columns">
-            <a type="button" href="javascript:NewsMap.DrawMap.fbshareCurrentPage()" target="_blank" >
+            <a type="button" href="javascript:NewsMap.DrawMap.fbshareCurrentPage()" target="_blank">
                 <img border="0" alt="facebook" src="img/fbshare.png" width="70" height="70">
             </a>
             <br/>
         </div>
         <div class="large-4 columns">
-            <a type="button" id="twitter-button" href="javascript:NewsMap.DrawMap.twitterCurrentArticle()" target="_blank"
+            <a type="button" id="twitter-button" href="javascript:NewsMap.DrawMap.twitterCurrentArticle()"
+               target="_blank"
             ><img border="0" alt="twitter" src="img/twitter_share.png" width="70" height="70"></a>
         </div>
 
@@ -140,15 +141,6 @@
                 </div>
                 <br>
             </div>
-        </div>
-        <div class="menu-item" id="video-wrapper">
-            <button>Nach Video suchen</button>
-        </div>
-        <div class="menu-item" id="text-wrapper">
-            <button>Nach Texten suchen</button>
-        </div>
-        <div class="menu-item" id="image-wrapper">
-            <button>kaa</button>
         </div>
 
     </div>
