--- a/index.html
+++ b/index.html
@@ -76,16 +76,13 @@
 
 
 <div id="header">
-
-
-    <div>
+    <div class="row collapse no-padding-margin">
         <div class="large-3 columns">
             <ul id="menu-list">
                 <li data-show="search"><i class="fi-magnifying-glass"></i></li>
                 <li data-show="location"><i class="fi-marker"></i></li>
                 <li data-show="favorites" id="favorites-button"><i class="fi-star" id="favorites-menu-star"></i></li>
                 <li data-show="chrono" id="right-menu-button"><i class="fi-list-thumbnails"></i></li>
-
 
             </ul>
         </div>
@@ -137,12 +134,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                </div>
                 <br>
             </div>
         </div>
-
     </div>
 </div>
 <script></script>
