--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 <div id="header">
     <div class="row collapse no-padding-margin">
-        <div class="large-3 columns">
+        <div class="large-3  medium-12 small-12 columns">
             <ul id="menu-list">
                 <li data-show="search"><i class="fi-magnifying-glass"></i></li>
                 <li data-show="location"><i class="fi-marker"></i></li>
@@ -89,17 +89,17 @@
         <div class="large-9 columns">
             <div id="search-wrapper" class="menu-item">
                 <div class="row">
-                    <div class="large-3 columns">
+                    <div class="large-3 medium-6 columns">
                         <input type="text" id="tag-search-input"></div>
 
-                    <div class="large-3 columns">
+                    <div class="large-3 medium-6 columns">
                         <select id="search-select">
                             <option value="tag">Suche nach Begriff</option>
                             <option value="location">Suche nach Ort</option>
                             <option value="title">Suche nach Titel</option>
                         </select>
                     </div>
-                    <div class="large-3 columns">
+                    <div class="large-3 medium-6 columns">
                         <select id="date-select">
                             <option value="last-week">letzte Woche</option>
                             <option value="entire-time">gesamter Zeitraum</option>
@@ -109,7 +109,7 @@
                             <option value="last-four-weeks">letzten vier Wochen</option>
                         </select>
                     </div>
-                    <div class="large-3 columns">
+                    <div class="large-3 medium-6 columns">
                         <button id="search-button">Suchen</button>
                     </div>
                 </div>
