--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 <div id="header">
     <div class="row collapse no-padding-margin">
-        <div class="large-3  medium-12 small-12 columns">
+        <div class="large-3  medium-6 columns">
             <ul id="menu-list">
                 <li data-show="search"><i class="fi-magnifying-glass"></i></li>
                 <li data-show="location"><i class="fi-marker"></i></li>
