--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <li data-show="search"><i class="fi-magnifying-glass"></i></li>
                 <li data-show="location"><i class="fi-marker"></i></li>
                 <li data-show="favorites" id="favorites-button"><i class="fi-star" id="favorites-menu-star"></i></li>
-                <li data-show="chrono" id="right-menu-button"><i id=identify-location" class="fi-list-thumbnails"></i>
+                <li data-show="chrono" id="right-menu-button"><i class="fi-list-thumbnails"></i>
                 </li>
 
             </ul>
