--- a/index.html
+++ b/index.html
@@ -145,14 +145,15 @@
 
 
 <article id="menu-rechts">
-    <div class="close-menu-right"><i class="fi-x"></i></div>
+    <div class="close-menu-right"><i class="fi-x right-x"></i></div>
     <ul class="accordion menu-item" id="chrono-wrapper" data-accordion>
 
     </ul>
 </article>
 
 <article id="favorites-menu">
-    <div class="close-menu-right"><i class="fi-x"></i></div>
+    <div class="close-menu-right"><i class="fi-x right-x"></i><div class="button tiny" id="showFavOnMap">Nur Favoriten
+        anzeigen</div></div>
     <h3 id="favorites-heading">Favoriten:</h3>
     <ul id="favorites-list">
     </ul>
