--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="large-3  medium-6 columns">
             <ul id="menu-list">
                 <li data-show="search"><i class="fi-magnifying-glass"></i></li>
-                <li data-show="location"><i class="fi-marker"></i></li>
+                <li data-show="location" id="identify-location"><i class="fi-marker"></i></li>
                 <li data-show="favorites" id="favorites-button"><i class="fi-star" id="favorites-menu-star"></i></li>
                 <li data-show="chrono" id="right-menu-button"><i class="fi-list-thumbnails"></i>
                 </li>
@@ -115,16 +115,6 @@
                     </div>
                 </div>
 
-            </div>
-        </div>
-        <div class="large-9 columns">
-            <div class="menu-item" id="location-wrapper">
-                <div class="row">
-                    <div class="small-12 large-4 columns">
-                        <button id="identify-location" class="tiny">Eigenen Standort ermitteln</button>
-                    </div>
-                </div>
-                <br>
             </div>
         </div>
     </div>
