--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <ul id="menu-list">
                 <li data-show="search"><i class="fi-magnifying-glass"></i></li>
                 <li data-show="location"><i class="fi-marker"></i></li>
-                <li data-show="favorites" id="favorites-button"><i class="fi-star" id="favorites-menu-star"></i></li>
+                <li data-show="favorites" id="favorites-button"><i class="fi-star"></i></li>
                 <li data-show="chrono" id="right-menu-button"><i class="fi-list-thumbnails"></i>
                 </li>
 
