Radius kann ausgewählt werden

--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
                     <div class="large-3 medium-6 columns">
                         <input type="text" id="tag-search-input"></div>
 
-                    <div class="large-3 medium-6 columns">
+                    <div class="large-2 medium-6 columns">
                         <select id="search-select">
                             <option value="tag">Suche nach Begriff</option>
                             <option value="location">Suche nach Ort</option>
                             <option value="title">Suche nach Titel</option>
                         </select>
                     </div>
-                    <div class="large-3 medium-6 columns">
+                    <div class="large-2 medium-6 columns">
                         <select id="date-select">
                             <option value="last-week">letzte Woche</option>
                             <option value="entire-time">gesamter Zeitraum</option>
@@ -100,6 +100,14 @@
                             <option value="yesterday">Gestern</option>
 
                             <option value="last-four-weeks">letzten vier Wochen</option>
+                        </select>
+                    </div>
+                    <div class="large-2 medium-6 columns">
+                        <select id="radius-select">
+                            <option value="6666">beliebig</option>
+                            <option value="100">100 km</option>
+                            <option value="50">50 km</option>
+                            <option value="30">30 km</option>
                         </select>
                     </div>
                     <div class="large-3 medium-6 columns">
