--- a/index.html
+++ b/index.html
@@ -83,32 +83,38 @@
             <div id="search-wrapper" class="menu-item">
                 <div class="row">
                     <div class="large-3 medium-6 columns">
-                        <input type="text" id="tag-search-input"></div>
+                    <label>Suchbegriff<input type="text" id="tag-search-input"></label>
+                    </div>
 
                     <div class="large-2 medium-6 columns">
-                        <select id="search-select">
-                            <option value="tag">Suche nach Begriff</option>
+                        <label>Ort / Begriff / Titel
+                            <select id="search-select">
                             <option value="location">Suche nach Ort</option>
+                            <option value="tag">Suche nach Begriff</option>
                             <option value="title">Suche nach Titel</option>
                         </select>
+                        </label>
                     </div>
                     <div class="large-2 medium-6 columns">
+                        <label>Zeitraum
                         <select id="date-select">
                             <option value="last-week">letzte Woche</option>
                             <option value="entire-time">gesamter Zeitraum</option>
                             <option value="today">Heute</option>
                             <option value="yesterday">Gestern</option>
-
                             <option value="last-four-weeks">letzten vier Wochen</option>
                         </select>
+                        </label>
                     </div>
                     <div class="large-2 medium-6 columns">
+                        <label>Umkreis
                         <select id="radius-select">
                             <option value="6666">beliebig</option>
                             <option value="100">100 km</option>
                             <option value="50">50 km</option>
                             <option value="30">30 km</option>
                         </select>
+                        </label>
                     </div>
                     <div class="large-3 medium-6 columns">
                         <button id="search-button">Suchen</button>
