autocomplete position respsonsiv

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 <div id="header">
     <div class="row collapse no-padding-margin">
-        <div class="large-3  medium-6 columns">
+        <div class="large-3  medium-6 columns none-selectable">
             <ul id="menu-list">
                 <li data-show="search"><i class="fi-magnifying-glass"></i></li>
                 <li data-show="location" id="identify-location"><i class="fi-marker"></i></li>
