schleissen autocomplete bei click ausserhalb

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="js/leaflet.js"></script>
     <script src="leaflet_markercluster_07/dist/leaflet.markercluster.js"></script>
     <script src="libs/jquery.dotdotdot.min.js"></script>
+    <script src="libs/jquery.ba-outside-events.js"></script>
     <!--<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css"/>-->
 
 </head>
