--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
 
 </head>
 <body>
+
 <div class="text-center" id="loading">
+    <img src="img/mopat.jpg" id="animDiv">
     <span>Lade Nachrichten...</span>
+
 </div>
 
 <div id="myModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
