suche nach region

--- a/index.html
+++ b/index.html
@@ -88,9 +88,10 @@
                     </div>
 
                     <div class="large-2 medium-6 columns">
-                        <label>Ort / Begriff / Titel
+                        <label>Stadt / Region / Begriff / Titel
                             <select id="search-select">
-                                <option value="location">Suche nach Ort</option>
+                                <option value="location">Suche nach Stadt</option>
+                                <option value="region">Suche nach Region</option>
                                 <option value="tag">Suche nach Begriff</option>
                                 <option value="title">Suche nach Titel</option>
                             </select>
