--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
 </div>
 
-<div id="myModal" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+<div id="myModal" class="reveal-modal text-center" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
 
-    <h2 id="modalTitle">Teilen sie diesen Artikel</h2>
+    <h2 id="modalTitle">Artikel teilen auf</h2>
     <br/><br/>
 
     <div class="row">
@@ -176,7 +176,7 @@
         Volkshochschule Bamberg-Land. (…)
     </div>
 
-    <button id="read-more-button"><a class="more-link"
+    <button id="read-more-button"><a class="more-link" target="_blank"
                                      href="http://lokalreporter.idvl.de/wegen-einer-personalversammlung-ist-das-landratsamt-bamberg-am-mittwoch-16-dezember-2015-ab-1300-uhr-geschlossen-41413/"
                                      rel="bookmark">Weiterlesen</a></button>
     <!-- <div class="button" id="share-button"><i class="fi-share"></i></div> -->
