--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
 
 </div>
 
-<div id="myModal" class="reveal-modal text-center" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
+<div id="myModal" class="reveal-modal text-center" data-reveal aria-labelledby="modalTitle" aria-hidden="true"
+     role="dialog">
 
     <h2 id="modalTitle">Artikel teilen auf</h2>
     <br/><br/>
@@ -86,10 +87,6 @@
         <div class="large-9 columns">
             <div id="search-wrapper" class="menu-item">
                 <div class="row">
-                    <div class="large-3 medium-6 columns">
-                        <label>Suchbegriff<input type="text" id="tag-search-input"></label>
-                    </div>
-
                     <div class="large-2 medium-6 columns">
                         <label>Stadt / Region / Begriff / Titel
                             <select id="search-select">
@@ -99,6 +96,9 @@
                                 <option value="title">Suche nach Titel</option>
                             </select>
                         </label>
+                    </div>
+                    <div class="large-3 medium-6 columns">
+                        <label>Suchbegriff<input type="text" id="tag-search-input"></label>
                     </div>
                     <div class="large-2 medium-6 columns">
                         <label>Zeitraum
