--- a/index.html
+++ b/index.html
@@ -178,6 +178,13 @@
     <a class="button" href="#" data-reveal-id="myModal"><i class="fi-share"></i></a>
 </article>
 
+<div id="query-template" hidden>
+    <li class="query-item">
+        <span class="query-span"></span>
+        <i class="fi-x remove-query"></i>
+    </li>
+</div>
+
 
 <script src="js/foundation.min.js"></script>
 
