--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <body>
 
 <div class="text-center" id="loading">
-    <img src="img/mopat.jpg" id="animDiv">
+    <img src="img/lokalRep.png" id="animDiv">
     <span>Lade Nachrichten...</span>
 
 </div>
