--- a/index.html
+++ b/index.html
@@ -70,27 +70,26 @@
 
 <ul id="autocomplete">
 </ul>
+<div id="radius-box"><span class="row"><i class="fi-x right" id="close-radius-box"></i></span>
+    <label>
+        <span class="row"> Umkreis Standort
+        </span>
 
+        <select id="radius-select">
+            <option value="6666">beliebig</option>
+            <option value="100">100 km</option>
+            <option value="50">50 km</option>
+            <option value="30">30 km</option>
+        </select>
+    </label>
+</div>
 
 <div id="header">
     <div class="row collapse no-padding-margin">
-        <div class="large-4  medium-6 columns none-selectable">
-
+        <div class="large-4 small-12 columns none-selectable">
             <ul id="menu-list">
-                <li> <div class="large-4 columns">
-
-                    <label><h5>Umkreis Standort</h5>
-                        <select id="radius-select">
-                            <option value="6666">beliebig</option>
-                            <option value="100">100 km</option>
-                            <option value="50">50 km</option>
-                            <option value="30">30 km</option>
-                        </select>
-                    </label>
-                </div></li>
-                <li  data-show="search"><i class="fi-magnifying-glass"></i></li>
-                <li data-show="location" id="identify-location" class="has-dropdown"><i class="fi-marker">
-                </i></li>
+                <li data-show="search"><i class="fi-magnifying-glass"></i></li>
+                <li data-show="location" id="identify-location"><i class="fi-marker"></i></li>
                 <li data-show="favorites" id="favorites-button"><i class="fi-star" id="favorites-menu-star"></i></li>
                 <li data-show="chrono" id="right-menu-button"><i class="fi-list-thumbnails"></i></li>
             </ul>
@@ -99,10 +98,6 @@
         <div class="large-8 columns">
             <div id="search-wrapper" class="menu-item">
                 <div class="row">
-                    <div class="large-4 medium-6 columns">
-                        <label>Suchbegriff<input type="text" id="tag-search-input"></label>
-                    </div>
-
                     <div class="large-2 medium-6 columns">
                         <label>Stadt / Region / Begriff / Titel
                             <select id="search-select">
@@ -112,6 +107,9 @@
                                 <option value="title">Suche nach Titel</option>
                             </select>
                         </label>
+                    </div>
+                    <div class="large-4 medium-6 columns">
+                        <label>Suchbegriff<input type="text" id="tag-search-input"></label>
                     </div>
                     <div class="large-2 medium-6 columns">
                         <label>Zeitraum
