--- a/index.html
+++ b/index.html
@@ -67,10 +67,9 @@
 
     <a class="close-reveal-modal" aria-label="Close">&#215;</a>
 </div>
-
 <ul id="autocomplete">
 </ul>
-<div id="radius-box"><span class="row"><i class="fi-x right" id="close-radius-box"></i></span>
+<div id="radius-box"><span class="row"><i class="fi-x left" id="close-radius-box"></i></span>
     <label>
         <span class="row"> Umkreis Standort
         </span>
