--- a/index.html
+++ b/index.html
@@ -100,15 +100,15 @@
                     <div class="large-2 medium-6 columns">
                         <label>Stadt / Region / Begriff / Titel
                             <select id="search-select">
-                                <option value="location">Suche nach Stadt</option>
-                                <option value="region">Suche nach Region</option>
-                                <option value="tag">Suche nach Begriff</option>
-                                <option value="title">Suche nach Titel</option>
+                                <option value="location" data-search="Stadt">Suche nach Stadt</option>
+                                <option value="region" data-search="Region">Suche nach Region</option>
+                                <option value="tag" data-search="Begriff">Suche nach Begriff</option>
+                                <option value="title" data-search="Titel">Suche nach Titel</option>
                             </select>
                         </label>
                     </div>
                     <div class="large-4 medium-6 columns">
-                        <label>Suchbegriff<input type="text" id="tag-search-input"></label>
+                        <label><span id="label-search">Suche nach Stadt</span><input type="text" id="tag-search-input"></label>
                     </div>
                     <div class="large-2 medium-6 columns">
                         <label>Zeitraum
