--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" href="leaflet_markercluster_07/dist/MarkerCluster.css"/>
     <link rel="stylesheet" type="text/css" href="leaflet_markercluster_07/dist/markercluster_default.css"/>
     <link rel="stylesheet" href="css/leaflet.css"/>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
     <script src="js/vendor/modernizr.js"></script>
     <script src="js/vendor/jquery.js"></script>
