--- a/index.html
+++ b/index.html
@@ -98,7 +98,11 @@
         <div class="large-8 columns">
             <div id="search-wrapper" class="menu-item">
                 <div class="row">
-                    <div class="large-2 medium-6 columns">
+                    <div class="large-1 small-12 columns large-only-text-center">
+                        <i class="fi-x" id="close-search-wrapper"></i>
+                    </div>
+                    <div class="large-3 medium-6 columns">
+
                         <label>Stadt / Region / Begriff / Titel
                             <select id="search-select">
                                 <option value="location" data-search="Stadt">Suche nach Stadt</option>
