--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
         </div>
     </div>
     <h3 id="favorites-heading">Favoriten:</h3>
+    <span id="no-favorites">Noch keine Favoriten hinzugefügt.</span>
     <ul id="favorites-list">
     </ul>
 </article>
