--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src="leaflet_markercluster_07/dist/leaflet.markercluster.js"></script>
     <script src="libs/jquery.dotdotdot.min.js"></script>
     <script src="libs/jquery.ba-outside-events.js"></script>
+    <script src="libs/jquery.cookie.js"></script>
     <!--<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css"/>-->
 
 </head>
