--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
     <br/><br/>
 
     <div class="row">
-        <div class="large-4 columns">
+        <div class="large-4 small-4 medium-4 columns">
             <a type="button" id="mailButton" href="mailto:blala@bla.de" target="_blank">
                 <img border="0" alt="mail" src="img/mail-share.png" width="70" height="70">
             </a>
             <br/>
         </div>
-        <div class="large-4 columns">
+        <div class="large-4 small-4 medium-4 columns">
             <a type="button" href="javascript:NewsMap.DrawMap.fbshareCurrentPage()" target="_blank">
                 <img border="0" alt="facebook" src="img/fbshare.png" width="70" height="70">
             </a>
             <br/>
         </div>
-        <div class="large-4 columns">
+        <div class="large-4 small-4 medium-4 columns">
             <a type="button" id="twitter-button" href="javascript:NewsMap.DrawMap.twitterCurrentArticle()"
                target="_blank"
             ><img border="0" alt="twitter" src="img/twitter_share.png" width="70" height="70"></a>
