--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" href="leaflet_markercluster_07/dist/MarkerCluster.css"/>
     <link rel="stylesheet" type="text/css" href="leaflet_markercluster_07/dist/markercluster_default.css"/>
     <link rel="stylesheet" href="css/leaflet.css"/>
+    <link rel="stylesheet" href="css/sweetalert.css"/>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 
     <script src="js/vendor/modernizr.js"></script>
@@ -29,6 +30,7 @@
     <script src="libs/jquery.dotdotdot.min.js"></script>
     <script src="libs/jquery.ba-outside-events.js"></script>
     <script src="libs/jquery.cookie.js"></script>
+    <script src="libs/sweetalert.min.js"></script>
     <!--<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet/v0.7.7/leaflet.css"/>-->
 
 </head>
